...
    <Stack
      screenOptions={{
        ...stackHeaderOptions,
        headerRight: CartHeaderRight,
      }}
    >
      <Stack.Screen name="index" options={{ title: "Profile" }} />
      <Stack.Screen name="orders" options={{ title: "My Orders" }} />
      <Stack.Screen name="order-detail" options={{ title: "Order Details" }} />
      <Stack.Screen name="saved-fabrics" options={{ title: "Saved Fabrics" }} />
      <Stack.Screen
        name="alteration-request"
        options={{ title: "Request Alteration" }}
      />
      <Stack.Screen
        name="alteration-detail"
        options={{ title: "Alteration Details" }}
      />
    </Stack>
...
